@@ -227,6 +227,9 @@ Release 1.3.0 - unreleased
     MAPREDUCE-5777. Support utf-8 text with BOM (byte order marker) 
     (Zhihai Xu via kasha)
 
+    MAPREDUCE-5979. FairScheduler: zero weight can cause sort failures. 
+    (Anubhav Dhoot via kasha)
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
